k8s/services/crypto-prices/deploy/gke/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto
  annotations:
    kubernetes.io/ingress.global-static-ip-name: yourdomain-com
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16" # add your range here
spec:
  defaultBackend:
    service:
      name: crypto-service
      port:
        number: 80
